--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,8 @@
         "lib/**/*.jar",
         "libraries/gson-2.10.1.jar"
     ],
-    "java.debug.settings.onBuildFailureProceed": true
+    "java.debug.settings.onBuildFailureProceed": true,
+    "docwriter.progress.trackClasses": false,
+    "docwriter.progress.trackFunctions": true,
+    "docwriter.progress.trackMethods": true
 }
