Adding trash se dañó el search gg

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,6 @@
     "java.debug.settings.onBuildFailureProceed": true,
     "docwriter.progress.trackClasses": false,
     "docwriter.progress.trackFunctions": true,
-    "docwriter.progress.trackMethods": true
+    "docwriter.progress.trackMethods": true,
+    "docwriter.style": "Javadoc"
 }
